First rev of defining bulk crud api

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -125,7 +125,7 @@ paths:
                 - $ref: '#/components/schemas/itemCollection'
       responses:
         '201':
-          description: Create request succeeded.
+          description: Create request succeeded for a single item.
           headers:
             Location:
               description: A link to the item
@@ -139,10 +139,13 @@ paths:
           content:
             application/geo+json:
               schema:
-                type: string
-            text/html:
+                $ref: '#/components/schemas/item'
+        '207':
+          description: Multistatus response for creating multiple items.
+          content:
+            application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/multiStatus'
         '400':
           $ref: '#/components/responses/BadRequest'
         5XX:
@@ -153,9 +156,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
   '/collections/{collectionId}/items/{featureId}':
     get:
       tags:
@@ -209,9 +209,6 @@ paths:
                 type: string
               description: A string to ensure the item has not been modified
           content:
-            text/html:
-              schema:
-                type: string
             application/json:
               schema:
                 type: string
@@ -229,9 +226,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
     patch:
       summary: update an existing item by id with a partial item definition
       description: >-
@@ -258,9 +252,6 @@ paths:
                 type: string
               description: A string to ensure the item has not been modified
           content:
-            text/html:
-              schema:
-                type: string
             application/json:
               schema:
                 type: string
@@ -278,9 +269,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
     delete:
       summary: delete an existing item by id
       description: Use this method to delete an existing item.
@@ -308,9 +296,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
   /stac:
     get:
       summary: Return the root catalog or collection.
@@ -1569,6 +1554,50 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/datetime'
+    multiStatus:
+      type: object
+      description: provides status information about the result of a bulk request
+      additionalProperties: true
+      properties:
+        multistatus:
+          type: array
+          items:
+            $ref: '#/components/schemas/multiStatusResponse'
+        metadata:
+          type: object
+          items:
+            $ref: '#/components/schemas/multiStatusMetadata'
+    multiStatusResponse:
+      type: object
+      description: >-
+        provides status information about a single operation within a bulk
+        request
+      additionalProperties: true
+      properties:
+        status:
+          type: number
+          description: the http status code of the response
+        message:
+          type: string
+          description: >-
+            a message describing the status of a single operation within a bulk
+            request, e.g. OK or Bad Request
+        href:
+          $ref: '#/components/schemas/link'
+    multiStatusMetadata:
+      type: object
+      description: provides metadata information about a bulk request
+      additionalProperties: true
+      properties:
+        succeeded:
+          type: number
+          description: the number of operations that succeeded in a bulk request
+        failed:
+          type: number
+          description: the number of operations that failed in a bulk request
+        total:
+          type: number
+          description: the total number of operations performed in a bulk request
   responses:
     LandingPage:
       description: |-
