Updated OAFeat 1.0.0-draf2 to 1.0.0 final and replaced WFS with OAFeat

--- a/api-spec/extensions/transaction/transaction.fragment.yaml
+++ b/api-spec/extensions/transaction/transaction.fragment.yaml
@@ -256,5 +256,5 @@ components:
 tags:
   - name: Transaction Extension
     description: >-
-      STAC-specific operations to add, remove, and edit items within WFS3
+      STAC-specific operations to add, remove, and edit items within OGC API - Features
       collections.
