--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -10,7 +10,8 @@ info:
     specification. Any service that implements this endpoint to allow search of
     spatiotemporal assets can be considered a STAC API. The endpoint is also
     available as an OpenAPI fragment that can be integrated with other OpenAPI
-    definitions, and is designed to slot seamlessly into a WFS 3 API definition.
+    definitions, and is designed to slot seamlessly into a OGC API - Features
+    definition.
   contact:
     name: STAC Specification
     url: 'http://stacspec.org'
@@ -20,7 +21,9 @@ tags:
   - name: Data
     description: access to data (features)
   - name: STAC
-    description: Extension to WFS3 Core to support STAC metadata model and search API
+    description: >-
+      Extension to OGC API - Features to support STAC metadata model and search
+      API
 paths:
   /:
     get:
@@ -42,7 +45,7 @@ paths:
         - Capabilities
       summary: information about specifications that this API conforms to
       description: |-
-        A list of all conformance classes specified in a standard that the 
+        A list of all conformance classes specified in a standard that the
         server conforms to.
       operationId: getConformanceDeclaration
       responses:
@@ -222,6 +225,47 @@ paths:
                 type: string
 components:
   parameters:
+    bbox:
+      name: bbox
+      in: query
+      description: |
+        Only features that have a geometry that intersects the bounding box are
+        selected. The bounding box is provided as four or six numbers,
+        depending on whether the coordinate reference system includes a
+        vertical axis (elevation or depth):
+
+        * Lower left corner, coordinate axis 1
+        * Lower left corner, coordinate axis 2  
+        * Lower left corner, coordinate axis 3 (optional) 
+        * Upper right corner, coordinate axis 1 
+        * Upper right corner, coordinate axis 2 
+        * Upper right corner, coordinate axis 3 (optional)
+
+        The coordinate reference system of the values is WGS84
+        longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
+        a different coordinate reference system is specified in the parameter
+        `bbox-crs`.
+
+        For WGS84 longitude/latitude the values are in most cases the sequence
+        of minimum longitude, minimum latitude, maximum longitude and maximum
+        latitude. However, in cases where the box spans the antimeridian the
+        first value (west-most box edge) is larger than the third value
+        (east-most box edge).
+
+
+        If a feature has multiple spatial geometry properties, it is the
+        decision of the server whether only a single spatial geometry property
+        is used to determine the extent or all relevant geometries.
+      required: false
+      schema:
+        type: array
+        minItems: 4
+        maxItems: 6
+        items:
+          type: number
+        $ref: '#/components/schemas/bbox'
+      style: form
+      explode: false
     collectionId:
       name: collectionId
       in: path
@@ -229,6 +273,42 @@ components:
       required: true
       schema:
         type: string
+    datetime:
+      name: datetime
+      in: query
+      description: >-
+        Either a date-time or an interval, open or closed. Date and time
+        expressions
+
+        adhere to RFC 3339. Open intervals are expressed using double-dots.
+
+
+        Examples:
+
+
+        * A date-time: "2018-02-12T23:20:50Z"
+
+        * A closed interval: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z"
+
+        * Open intervals: "2018-02-12T00:00:00Z/.." or "../2018-03-18T12:31:12Z"
+
+
+        Only features that have a temporal property that intersects the value of
+
+        `datetime` are selected.
+
+
+        If a feature has multiple temporal properties, it is the decision of the
+
+        server whether only a single temporal property is used to determine
+
+        the extent or all relevant temporal properties.
+      required: false
+      schema:
+        type: string
+        $ref: '#/components/schemas/datetime'
+      style: form
+      explode: false
     featureId:
       name: featureId
       in: path
@@ -242,6 +322,10 @@ components:
       description: The maximum number of results to return (page size). Defaults to 10
       required: false
       schema:
+        type: integer
+        minimum: 1
+        maximum: 10000
+        default: 10
         $ref: '#/components/schemas/limit'
       style: form
       explode: false
@@ -277,77 +361,6 @@ components:
       schema:
         $ref: '#/components/schemas/collectionsArray'
       explode: false
-    bbox:
-      name: bbox
-      in: query
-      description: |
-        Only features that have a geometry that intersects the bounding box are
-        selected. The bounding box is provided as four or six numbers,
-        depending on whether the coordinate reference system includes a
-        vertical axis (elevation or depth):
-
-        * Lower left corner, coordinate axis 1
-        * Lower left corner, coordinate axis 2  
-        * Lower left corner, coordinate axis 3 (optional) 
-        * Upper right corner, coordinate axis 1 
-        * Upper right corner, coordinate axis 2 
-        * Upper right corner, coordinate axis 3 (optional)
-
-        The coordinate reference system of the values is WGS84
-        longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
-        a different coordinate reference system is specified in the parameter
-        `bbox-crs`.
-
-        For WGS84 longitude/latitude the values are in most cases the sequence
-        of minimum longitude, minimum latitude, maximum longitude and maximum
-        latitude. However, in cases where the box spans the antimeridian the
-        first value (west-most box edge) is larger than the third value
-        (east-most box edge).
-
-
-        If a feature has multiple spatial geometry properties, it is the
-        decision of the server whether only a single spatial geometry property
-        is used to determine the extent or all relevant geometries.
-      required: false
-      schema:
-        $ref: '#/components/schemas/bbox'
-      style: form
-      explode: false
-    datetime:
-      name: datetime
-      in: query
-      description: >-
-        Either a date-time or an interval, open or closed. Date and time
-        expressions
-
-        adhere to RFC 3339. Open intervals are expressed using double-dots.
-
-
-        Examples:
-
-
-        * A date-time: "2018-02-12T23:20:50Z"
-
-        * A closed interval: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z"
-
-        * Open intervals: "2018-02-12T00:00:00Z/.." or "../2018-03-18T12:31:12Z"
-
-
-        Only features that have a temporal property that intersects the value of
-
-        `datetime` are selected.
-
-
-        If a feature has multiple temporal properties, it is the decision of the
-
-        server whether only a single temporal property is used to determine
-
-        the extent or all relevant temporal properties.
-      schema:
-        $ref: '#/components/schemas/datetime'
-      required: false
-      explode: false
-      style: form
   schemas:
     collection:
       type: object
@@ -442,6 +455,7 @@ components:
         extents, for example, thermal or pressure ranges.
       properties:
         spatial:
+          description: The spatial extent of the features in the collection.
           type: object
           properties:
             bbox:
@@ -460,13 +474,63 @@ components:
               minItems: 1
               items:
                 description: >-
-                  West, south, east, north edges of the bounding box. The
-                  coordinates
+                  Each bounding box is provided as four or six numbers,
+                  depending on
 
-                  are in the coordinate reference system specified in `crs`. By
-                  default
+                  whether the coordinate reference system includes a vertical
+                  axis
 
-                  this is WGS 84 longitude/latitude.
+                  (height or depth):
+
+
+                  * Lower left corner, coordinate axis 1
+
+                  * Lower left corner, coordinate axis 2
+
+                  * Minimum value, coordinate axis 3 (optional)
+
+                  * Upper right corner, coordinate axis 1
+
+                  * Upper right corner, coordinate axis 2
+
+                  * Maximum value, coordinate axis 3 (optional)
+
+
+                  The coordinate reference system of the values is WGS 84
+                  longitude/latitude
+
+                  (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a
+                  different coordinate
+
+                  reference system is specified in `crs`.
+
+
+                  For WGS 84 longitude/latitude the values are in most cases the
+                  sequence of
+
+                  minimum longitude, minimum latitude, maximum longitude and
+                  maximum latitude.
+
+                  However, in cases where the box spans the antimeridian the
+                  first value
+
+                  (west-most box edge) is larger than the third value (east-most
+                  box edge).
+
+
+                  If the vertical axis is included, the third and the sixth
+                  number are
+
+                  the bottom and the top of the 3-dimensional bounding box.
+
+
+                  If a feature has multiple spatial geometry properties, it is
+                  the decision of the
+
+                  server whether only a single spatial geometry property is used
+                  to determine
+
+                  the extent or all relevant geometries.
                 type: array
                 minItems: 4
                 maxItems: 6
@@ -573,14 +637,11 @@ components:
           items:
             $ref: '#/components/schemas/link'
         timeStamp:
-          type: string
-          format: date-time
+          $ref: '#/components/schemas/timeStamp'
         numberMatched:
-          type: integer
-          minimum: 0
+          $ref: '#/components/schemas/numberMatched'
         numberReturned:
-          type: integer
-          minimum: 0
+          $ref: '#/components/schemas/numberReturned'
     featureGeoJSON:
       type: object
       required:
@@ -748,6 +809,25 @@ components:
                 minItems: 2
                 items:
                   type: number
+    numberMatched:
+      description: |-
+        The number of features of the feature type that match the selection
+        parameters like `bbox`.
+      type: integer
+      minimum: 0
+      example: 127
+    numberReturned:
+      description: |-
+        The number of features in the feature collection.
+
+        A server may omit this information in a response, if the information
+        about the number of features is not known or difficult to compute.
+
+        If the value is provided, the value shall be identical to the number
+        of items in the "features" array.
+      type: integer
+      minimum: 0
+      example: 10
     pointGeoJSON:
       type: object
       required:
@@ -783,6 +863,13 @@ components:
               minItems: 2
               items:
                 type: number
+    timeStamp:
+      description: >-
+        This property indicates the time and date when the response was
+        generated.
+      type: string
+      format: date-time
+      example: '2017-08-17T08:05:32Z'
     searchBody:
       description: The search criteria
       type: object
@@ -1141,11 +1228,11 @@ components:
   responses:
     LandingPage:
       description: |-
-        The landing page provides links to the API definition 
-        (link relations `service-desc` and `service-doc`), 
-        the Conformance declaration (path `/conformance`, 
-        link relation `conformance`), and the Feature 
-        Collections (path `/collections`, link relation 
+        The landing page provides links to the API definition
+        (link relations `service-desc` and `service-doc`),
+        the Conformance declaration (path `/conformance`,
+        link relation `conformance`), and the Feature
+        Collections (path `/collections`, link relation
         `data`).
       content:
         application/json:
@@ -1184,9 +1271,9 @@ components:
       description: |-
         The URIs of all conformance classes supported by the server.
 
-        To support "generic" clients that want to access multiple 
-        OGC API Features implementations - and not "just" a specific 
-        API / server, the server declares the conformance 
+        To support "generic" clients that want to access multiple
+        OGC API Features implementations - and not "just" a specific
+        API / server, the server declares the conformance
         classes it implements and conforms to.
       content:
         application/json:
@@ -1207,18 +1294,18 @@ components:
 
 
         The dataset is organized as one or more feature collections. This
-        resource 
+        resource
 
-        provides information about and access to the collections. 
+        provides information about and access to the collections.
 
 
         The response contains the list of collections. For each collection, a
-        link 
+        link
 
         to the items in the collection (path
-        `/collections/{collectionId}/items`, 
+        `/collections/{collectionId}/items`,
 
-        link relation `items`) as well as key information about the collection. 
+        link relation `items`) as well as key information about the collection.
 
         This information includes:
 
@@ -1301,11 +1388,11 @@ components:
         Information about the feature collection with id `collectionId`.
 
 
-        The response contains a linkto the items in the collection 
+        The response contains a linkto the items in the collection
 
-        (path `/collections/{collectionId}/items`,link relation `items`) 
+        (path `/collections/{collectionId}/items`,link relation `items`)
 
-        as well as key information about the collection. This information 
+        as well as key information about the collection. This information
 
         includes:
 
@@ -1366,41 +1453,41 @@ components:
             type: string
     Features:
       description: >-
-        The response is a document consisting of features in the collection. 
+        The response is a document consisting of features in the collection.
 
-        The features included in the response are determined by the server 
+        The features included in the response are determined by the server
 
-        based on the query parameters of the request. To support access to 
+        based on the query parameters of the request. To support access to
 
-        larger collections without overloading the client, the API supports 
+        larger collections without overloading the client, the API supports
 
-        paged access with links to the next page, if more features are selected 
+        paged access with links to the next page, if more features are selected
 
         that the page size.
 
 
-        The `bbox` and `datetime` parameter can be used to select only a 
+        The `bbox` and `datetime` parameter can be used to select only a
 
-        subset of the features in the collection (the features that are in the 
+        subset of the features in the collection (the features that are in the
 
         bounding box or time interval). The `bbox` parameter matches all
-        features 
+        features
 
-        in the collection that are not associated with a location, too. The 
+        in the collection that are not associated with a location, too. The
 
-        `datetime` parameter matches all features in the collection that are 
+        `datetime` parameter matches all features in the collection that are
 
         not associated with a time stamp or interval, too.
 
 
-        The `limit` parameter may be used to control the subset of the 
+        The `limit` parameter may be used to control the subset of the
 
         selected features that should be returned in the response, the page
         size.
 
-        Each page may include information about the number of selected and 
+        Each page may include information about the number of selected and
 
-        returned features (`numberMatched` and `numberReturned`) as well as 
+        returned features (`numberMatched` and `numberReturned`) as well as
 
         links to support paging (link relation `next`).
       content:
