--- a/api-spec/extensions/crud/crud.fragment.yaml
+++ b/api-spec/extensions/crud/crud.fragment.yaml
@@ -49,6 +49,90 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/exception'
+    put:
+      summary: Replace multiple items.
+      description: Replace a number of items by their IDs and ETags using complete item descriptions.
+      operationId: putItems
+      tags:
+        - CRUD Extension
+      parameters:
+        - $ref: '#/components/parameters/collectionId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/itemCollection'
+      responses:
+        '207':
+          description: Multi-Status response for replacing multiple items.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/multiStatus'
+        '5XX':
+          $ref: '#/components/responses/InternalServerError'
+        default:
+          description: An error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/exception'
+    patch:
+      summary: Update multiple items.
+      description: Update a number of items by their IDs and ETags using partial item descriptions.
+      operationId: patchItems
+      tags:
+        - CRUD Extension
+      parameters:
+        - $ref: '#/components/parameters/collectionId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/partialItemCollection'
+      responses:
+        '207':
+          description: Multi-Status response for patching multiple items.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/multiStatus'
+        '5XX':
+          $ref: '#/components/responses/InternalServerError'
+        default:
+          description: An error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/exception'
+    delete:
+      summary: Delete multiple items.
+      description: Delete a number of items by their IDs and ETags.
+      operationId: deleteItems
+      tags:
+        - CRUD Extension
+      parameters:
+        - $ref: '#/components/parameters/collectionId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/partialItemCollection'
+      responses:
+        '207':
+          description: Multi-Status response for deleting multiple items.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/multiStatus'
+        '5XX':
+          $ref: '#/components/responses/InternalServerError'
+        default:
+          description: An error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/exception'
   '/collections/{collectionId}/items/{featureId}':
     get:
       responses:
@@ -226,6 +310,22 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/datetime'
+    partialItemCollection:
+      description: >-
+        A GeoJSON FeatureCollection of partial items.
+      type: object
+      required:
+        - features
+        - type
+      properties:
+        type:
+          type: string
+          enum:
+            - FeatureCollection
+        features:
+          type: array
+          items:
+            $ref: '#/components/schemas/partialItem'
     multiStatus:
       type: object
       description: Provides status information about the result of a bulk request
