--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -342,7 +342,6 @@ paths:
         - $ref: '#/components/parameters/bbox'
         - $ref: '#/components/parameters/datetime'
         - $ref: '#/components/parameters/limit'
-        - $ref: '#/components/parameters/next'
         - $ref: '#/components/parameters/ids'
         - $ref: '#/components/parameters/collectionsArray'
         - $ref: '#/components/parameters/query'
@@ -548,16 +547,6 @@ components:
         default: 10
       style: form
       explode: false
-    next:
-      name: next
-      in: query
-      description: >-
-        The token to retrieve the next set of results, e.g., offset, page,
-        continuation token
-      required: false
-      schema:
-        $ref: '#/components/schemas/next'
-      style: form
     ids:
       name: ids
       in: query
@@ -565,7 +554,7 @@ components:
         Array of Item ids to return. All other filter parameters that further
         restrict the number of 
 
-        search results (except `next` and `limit`) are ignored
+        search results are ignored
       required: false
       schema:
         $ref: '#/components/schemas/ids'
@@ -1154,6 +1143,23 @@ components:
           example: NAIP Child Catalog
         length:
           type: integer
+        method:
+          type: string
+          enum:
+            - GET
+            - POST
+          default: get
+          description: Specifies the HTTP method that the link expects
+        headers:
+          type: object
+          description: Object key values pairs they map to headers
+          example:
+            Accept: application/json
+        body:
+          type: string
+          description: >-
+            For POST requests, the link can specify the HTTP body as a JSON
+            object.
       title: Link
     multilinestringGeoJSON:
       type: object
@@ -1359,19 +1365,12 @@ components:
         - $ref: '#/components/schemas/bboxFilter'
         - $ref: '#/components/schemas/datetimeFilter'
         - $ref: '#/components/schemas/intersectsFilter'
-        - $ref: '#/components/schemas/nextFilter'
         - $ref: '#/components/schemas/collectionsFilter'
         - $ref: '#/components/schemas/idsFilter'
         - $ref: '#/components/schemas/limitFilter'
         - $ref: '#/components/schemas/queryFilter'
         - $ref: '#/components/schemas/sortFilter'
         - $ref: '#/components/schemas/fieldsFilter'
-    next:
-      type: string
-      description: >-
-        The token to retrieve the next set of results, e.g., offset, page,
-        continuation token
-      default: null
     limit:
       type: integer
       minimum: 1
@@ -1437,7 +1436,7 @@ components:
         Array of Item ids to return. All other filter parameters that further
         restrict the number of 
 
-        search results (except `next` and `limit`) are ignored
+        search results are ignored
       items:
         type: string
     datetimeFilter:
@@ -1458,12 +1457,6 @@ components:
       properties:
         limit:
           $ref: '#/components/schemas/limit'
-    nextFilter:
-      type: object
-      description: Only returns the next set of results
-      properties:
-        next:
-          $ref: '#/components/schemas/next'
     idsFilter:
       type: object
       description: Only returns items that match the array of given ids
@@ -1636,9 +1629,6 @@ components:
             - next
             - returned
           properties:
-            next:
-              type: string
-              nullable: true
             limit:
               type: integer
               nullable: true
