--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -324,7 +324,7 @@ components:
           enum:
             - GET
             - POST
-          default: get
+          default: GET
           description: Specifies the HTTP method that the link expects
         headers:
           type: object
