--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -927,7 +927,7 @@ components:
           enum:
             - GET
             - POST
-          default: get
+          default: GET
           description: Specifies the HTTP method that the link expects
         headers:
           type: object
