rename search api extension to context

--- a/api-spec/extensions/context/context.fragment.yaml
+++ b/api-spec/extensions/context/context.fragment.yaml
@@ -3,7 +3,7 @@ components:
     itemCollection:
       type: object
       properties:
-        'search:metadata':
+        'context':
           type: object
           required:
             - next
