--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -26,8 +26,8 @@ tags:
       API
   - name: CRUD Extension
     description: >-
-      STAC-specific operations to add, remove, and edit items within WFS3
-      collections.
+      STAC-specific operations to add, remove, and edit items within OGC API -
+      Features collections.
 paths:
   /:
     get:
@@ -1989,21 +1989,6 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/datetime'
-    partialItemCollection:
-      description: A GeoJSON FeatureCollection of partial items.
-      type: object
-      required:
-        - features
-        - type
-      properties:
-        type:
-          type: string
-          enum:
-            - FeatureCollection
-        features:
-          type: array
-          items:
-            $ref: '#/components/schemas/partialItem'
     multiStatus:
       type: object
       description: Provides status information about the result of a bulk request
