adding merge option for post links

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -1156,10 +1156,24 @@ components:
           example:
             Accept: application/json
         body:
-          type: string
+          type: object
           description: >-
             For POST requests, the link can specify the HTTP body as a JSON
             object.
+        merge:
+          type: boolean
+          default: false
+          description: >-
+            This is only valid when the server is responding to POST request.
+
+            If merge is true, the client is expected to merge the body value
+            into the current request body before following the link. This avoids
+            passing large post bodies back and forth when following links,
+            particularly for navigating pages through the POST /search endpoint.
+
+            NOTE: To support form encoding it is expected that a client be able
+            to merge in the key value pairs specified as JSON `{"next":
+            "token"}` will become `&next=token`
       title: Link
     multilinestringGeoJSON:
       type: object
