--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -314,6 +314,8 @@ components:
       required:
         - rel
       properties:
+        title:
+          example: NAIP Child Catalog
         href:
           format: url
           example: 'http://www.geoserver.example/stac/naip/child/catalog.json'
@@ -330,12 +332,21 @@ components:
           type: object
           description: Object key values pairs they map to headers
           example:
-            Accept:  application/json
+            Accept: application/json
         body:
-          type: string
+          type: object
           description: For POST requests, the link can specify the HTTP body as a JSON object.
-        title:
-          example: NAIP Child Catalog
+        merge:
+          type: boolean
+          default: false
+          description: >-
+            This is only valid when the server is responding to POST request.
+
+            If merge is true, the client is expected to merge the body value into the current request body before following the link.
+            This avoids passing large post bodies back and forth when following links, particularly for navigating pages through the POST /search endpoint.
+
+            NOTE: To support form encoding it is expected that a client be able to merge in the key value pairs specified as JSON
+            `{"next": "token"}` will become `&next=token`
     license:
       type: string
       description: >-
